<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splashLogin.LoginActivity"
    android:orientation="vertical"
    android:textAlignment="center"
    android:padding="@dimen/padding"
    android:background="@color/gjblue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/app_name"
            android:paddingTop="30dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/app_name_text_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/gj3"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <androidx.cardview.widget.CardView
            android:id="@+id/loginCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_card_view_height"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="@dimen/card_margin_top">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/yellowish"
                android:padding="@dimen/padding">

                <EditText
                    android:id="@+id/input_text_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:hint="@string/enter_username"/>

                <EditText
                    android:id="@+id/input_text_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:layout_below="@+id/input_text_username"
                    android:hint="@string/enter_password"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_bottom_margin"
            android:textStyle="bold"
            android:background="@drawable/rounded_btn"
            android:backgroundTint="@color/yellowish"
            android:text="@string/login"
            android:textAllCaps="false"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>
